--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "hbs": "^4.1.1",
-    "mongoose": "~4.13.4",
+    "mongoose": ">=5.7.5",
     "morgan": "^1.9.1",
     "node-sass-middleware": "^0.11.0",
     "serve-favicon": "~2.4.5",
