--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev": "DEBUG=uber-for-loundry:* nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.3",
-    "dotenv": "~4.0.0",
+    "dotenv": "^4.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "hbs": "^4.1.1",
